# lumed_andor

./: README.md  pyproject.toml
src/lumed_andor/: __main__.py  acquisition.py  andor_control.py  andor_widget.py  device_worker.py  fileio.py  plotting.py  workerthreads.py
src/lumed_andor/ui/: andor_ui.py  andor_ui.ui
