[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lumed_andor"
version = "0.9.rc1"
authors = [{ name = "Guillaume Sheehy", email = "guillaume.sheehy@polymtl.ca" }]
dependencies = ["PyQt5", "numpy", "matplotlib", "tomli", "tomli-w", "dacite"]
description = "A library and GUI to control Andor cameras."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
